<resources>
    <string name="app_name">BiteBliss</string>
    <string name="designed_by">Designed By</string>
    <string name="hawkscode">HawksCode</string>
    <string name="enjoy_restaurant_quality_meals_at_home">Enjoy Restaurant Quality Meals\nat Home</string>
    <string name="next">NEXT</string>
    <string name="deliver_favorite_food">Deliver Favorite Food</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="continue_with">Continue With</string>
    <string name="facebcook">Facebcook</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="todo">TODO</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="name">Name</string>
    <string name="sing_up_with">Sing Up With</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already Have An Account</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="to_provide_you_with_best_dining_experience_we_need_your_permission_to_access_your_device_s_location_by_enabling_location_services_we_can_offer_personalized_restaurant_recommendation_accurate_delivery_estimates_and_ensure_a_seamless_food_delivery_experience">To provide you with best dining experience,\nwe need your permission to access your\ndevice\'s location. By enabling location services,\nwe can offer personalized restaurant\nrecommendation,accurate delivery estimates,\nand ensure a seamless food delivery\nexperience.</string>
    <string name="choose_location">Choose Location</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="car_truck">Car Truck</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">Popular</string>
    <string name="view_menu">View Menu</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="_100">$100</string>
    <string name="proceed">Proceed</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="edit">Edit</string>
    <string name="phone_no">Phone No..</string>
    <string name="address">Address</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="upi">UPI</string>
    <string name="phonepe">PhonePe</string>
    <string name="payment_method">Payment Method</string>
    <string name="total_amount">Total Amount</string>
    <string name="_15">$15</string>
    <string name="place_my_order">Place My Order</string>
    <string name="congrats">Congrats</string>
    <string name="your_order_placed">Your Order Placed</string>
    <string name="go_to_home">Go To Home</string>
    <string name="your_profile">Your Profile</string>
    <string name="email">E-mail</string>
    <string name="save_changes">Save Changes</string>
    <string name="your_order_history">Order History</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="order_history">Order History</string>
    <string name="recent_buy">Recent Buy</string>
    <string name="previously_buy">Previously buy</string>
</resources>