<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">


    <TextView
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_profile"
        android:layout_marginTop="18dp"
        android:textAlignment="center"
        android:textColor="@color/tv_color"
        android:textSize="28sp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="38dp"
        android:autofillHints="null"
        android:background="@drawable/et_background"
        android:hint="@string/name"
        android:textColorHint="#868585"
        android:inputType="textPersonName"
        android:paddingHorizontal="18dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/profile" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="18dp"
        android:background="@drawable/et_background"
        android:gravity="top"
        android:hint="@string/address"
        android:minLines="3"
        android:paddingHorizontal="18dp"
        android:paddingVertical="4dp"
        android:textColor="@color/black"
        android:textColorHint="#868585"
        app:layout_constraintTop_toBottomOf="@id/et_user_name" />

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="20dp"
        android:autofillHints="null"
        android:background="@drawable/et_background"
        android:hint="@string/phone_no"
        android:inputType="phone"
        android:textColorHint="#868585"
        android:paddingHorizontal="18dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/et_address" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="20dp"
        android:autofillHints="null"
        android:background="@drawable/et_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#868585"
        android:paddingHorizontal="18dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/et_phone_number" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update_profile_btn"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/save_changes"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="28dp"
        android:background="@drawable/greenbuttongradient"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="16dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/history_btn"
        android:layout_width="160dp"
        android:layout_height="54dp"
        android:text="@string/your_order_history"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="48dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/greenbuttongradient"
        android:backgroundTint="#344955"
        app:layout_constraintTop_toBottomOf="@id/update_profile_btn"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="16dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout_btn"
        android:layout_width="160dp"
        android:layout_height="54dp"
        android:layout_marginHorizontal="28dp"
        android:background="@drawable/greenbuttongradient"
        android:backgroundTint="#344955"
        android:elevation="16dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/history_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/history_btn"
        app:layout_constraintTop_toTopOf="@+id/history_btn" />



</androidx.constraintlayout.widget.ConstraintLayout>