<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context=".activities.ActivityPlaceOrder">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/todo"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textAlignment="center"
        android:textColor="@color/tv_color"
        android:textSize="38sp"
        app:layout_constraintTop_toBottomOf="@id/back_btn" />

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="18dp"
        android:autofillHints="null"
        android:background="@drawable/et_background"
        android:hint="@string/name"
        android:textColorHint="#868585"
        android:inputType="textPersonName"
        android:paddingHorizontal="18dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_edit" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/et_background"
        android:gravity="top"
        android:hint="@string/address"
        android:minLines="3"
        android:paddingHorizontal="18dp"
        android:paddingTop="10dp"
        android:textColor="@color/white"
        android:textColorHint="#868585"
        app:layout_constraintTop_toBottomOf="@id/et_user_name" />

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="18dp"
        android:autofillHints="null"
        android:background="@drawable/et_background"
        android:hint="@string/phone_no"
        android:inputType="phone"
        android:textColorHint="#868585"
        android:paddingHorizontal="18dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/et_address" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/payment_method_lay"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="38dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toBottomOf="@id/et_phone_number">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:background="@drawable/et_background"
            android:elevation="8dp"
            app:boxCornerRadiusTopStart="9909dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@drawable/arrow_down"
            app:endIconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/list_payment_methods"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:hint=""
                android:inputType="none"
                android:text="@string/payment_method"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/total_amount_lay"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/et_background"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/payment_method_lay">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/total_amount"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:paddingVertical="14dp"
            android:textSize="20sp"
            android:layout_marginHorizontal="16dp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="54dp"
            app:layout_constraintEnd_toStartOf="@id/tv_price"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="#B1B0B0"
            android:layout_marginEnd="28dp"/>

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/_15"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textAlignment="center"
            android:paddingVertical="14dp"
            android:layout_marginHorizontal="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUp_btn"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/place_my_order"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="58dp"
        android:layout_marginHorizontal="28dp"
        android:background="@drawable/greenbuttongradient"
        app:layout_constraintTop_toBottomOf="@id/total_amount_lay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>