<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.OrderPlacedFragment"
    android:background="@drawable/bottom_sheet_shape">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congrats"
        android:textSize="34sp"
        android:textAlignment="gravity"
        android:textColor="@color/tv_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/tv_congrats"
        android:layout_marginTop="68dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_order_placed"
        android:textSize="34sp"
        android:textAlignment="gravity"
        android:textColor="@color/tv_color"
        app:layout_constraintTop_toBottomOf="@id/tv_congrats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/tv_order_placed"
        android:layout_marginTop="8dp"/>


    <ImageView
        android:id="@+id/iv_congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_order_placed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/congratulation"
        android:layout_marginTop="120dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/go_to_home_btn"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintTop_toBottomOf="@id/iv_congrats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="68dp"
        android:text="@string/go_to_home"
        android:textSize="16sp"
        android:layout_marginTop="48dp"
        android:elevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="80dp"
        android:background="@drawable/greenbuttongradient"/>

</androidx.constraintlayout.widget.ConstraintLayout>