<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackgroundBorderless">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        android:elevation="10dp"
        app:cardBackgroundColor="#3C0753"
        app:cardCornerRadius="22dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/menu_image_card"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="12dp"
                app:cardCornerRadius="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/food_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop"
                    android:src="#7D7D7D" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/menu_food_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/menu_image_card"
                app:layout_constraintStart_toEndOf="@+id/menu_image_card"
                app:layout_constraintTop_toTopOf="@id/menu_image_card" />

            <TextView
                android:id="@+id/menu_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:text="@string/_100"
                android:textColor="@color/tv_color"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/menu_add_to_cart_btn"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/add_to_cart_shape"
                android:elevation="8dp"
                android:gravity="center"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="@id/menu_price"
                app:layout_constraintStart_toStartOf="@id/menu_price"
                app:layout_constraintTop_toBottomOf="@id/menu_price" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>